--- a/css/screen.css
+++ b/css/screen.css
@@ -54,11 +54,11 @@ html {
     color: #5C6366;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    box-sizing: border-box;
 }
 
-body {
-    max-width: 42em;
-    margin: 0 auto;
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 /*
@@ -183,6 +183,27 @@ a:hover, a:focus {
     color: #1ABAFF;
 }
 
+@media (min-width: 768px) {
+    h1 {
+        font-size: 46px;
+        line-height: 56px;
+    }
+}
+
+@media (min-width: 920px) {
+    h1 {
+        font-size: 52px;
+        line-height: 64px;
+    }
+}
+
+@media (min-width: 1200px) {
+    h1 {
+        font-size: 58px;
+        line-height: 64px;
+    }
+}
+
 /*
     Components: author
 */
@@ -218,6 +239,79 @@ a:hover, a:focus {
 .c-author__name {
     font-size: 16px;
     line-height: 16px;
+}
+
+@media(min-width:992px) {
+    .c-author {
+        display: block;
+    }
+    .c-author__image {
+        margin-bottom: 16px;
+    }
+}
+
+/*
+    components: c-article
+*/
+
+.c-article__header, .c-article__body {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.c-article__header {
+    padding: 24px 24px 0;
+}
+
+.c-article__body {
+    padding: 0 24px;
+}
+
+.c-article__date {
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 8px;
+}
+
+@media(min-width: 768px) {
+    .c-article__header {
+        padding: 48px 48px 24px;
+    }
+    .c-article__author {
+        margin-bottom: 24px;
+    }
+    .c-article__body {
+        padding: 24px 48px;
+    }
+}
+
+@media(min-width:920px) {
+    .c-article__body {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .c-article__author {
+        width: 25%;
+        padding-right: 24px;
+    }
+    .c-article__content {
+        width: 75%;
+    }
+    .c-article__date {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 8px;
+    }
+}
+
+/*
+    utilities: max-width
+    ---
+    utility classes to putt specific max widths onto elements.
+*/
+
+.u-max-width-sm {
+    max-width: 36em;
 }
 
 /* Small devices (landscape phones, 576px and up) */
